...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/stored_courses_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725" />

    <EditText
        android:id="@+id/enter_subject"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:inputType="textPersonName"
        android:nextFocusForward="@+id/enter_course_number"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/course_subject_textview"
        app:layout_constraintLeft_toRightOf="@+id/course_subject_textview"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

    <EditText
        android:id="@+id/enter_course_number"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:nextFocusForward="@+id/enter_quarter"
        app:layout_constraintBottom_toBottomOf="@+id/course_number_textview"
        app:layout_constraintLeft_toRightOf="@+id/course_number_textview"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

    <Spinner
        android:id="@+id/enter_quarter"
...

    <Spinner
        android:id="@+id/enter_year"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:nextFocusForward="@+id/enter_size"
        app:layout_constraintBottom_toBottomOf="@+id/course_year_textview"
        app:layout_constraintLeft_toRightOf="@+id/course_year_textview" />

    <Spinner
        android:id="@+id/enter_size"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:nextFocusForward="@+id/enter_button"
        app:layout_constraintBottom_toBottomOf="@+id/course_size_textview"
        app:layout_constraintLeft_toRightOf="@+id/course_size_textview"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

    <TextView
        android:id="@+id/error_textview"
...
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="onSubmitButtonClicked"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

<!--    <Button-->
<!--        android:id="@+id/back_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Back"-->
<!--        android:onClick="onBackButtonClicked"-->
<!--        app:layout_constraintVertical_bias="0.95"-->
<!--        app:layout_constraintVertical_bias="0.925"-->
...
